--- a/index.html
+++ b/index.html
@@ -1,87 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 10px;
-        }
-        .gallery img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            padding-top: 100px;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.9);
-        }
-        .modal-content {
-            margin: auto;
-            display: block;
-            width: 80%;
-            max-width: 700px;
-        }
-        .modal-content img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: #f1f1f1;
-            font-size: 40px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Curriculum Vitae</title>
+<style>
+    body {
+        background-color: aquamarine;
+        font-family: Arial, sans-serif;
+    }
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+    h1 {
+        text-align: center;
+    }
+    .photo {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .photo img {
+        max-width: 200px;
+        height: auto;
+        border-radius: 50%;
+        margin-bottom: 10px;
+    }
+    .gallery {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .gallery img {
+        max-width: calc(33.33% - 10px);
+        margin-bottom: 10px;
+    }
+    .caption {
+        text-align: center;
+    }
+</style>
 </head>
 <body>
 
 <div class="container">
-    <h1>Meu Portfólio</h1>
-   
-    <div id="myModal" class="modal">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <img class="modal-content" id="modalImg">
+    <h1>Curriculum Vitae</h1>
+    <div class="photo">
+        <img src="link_para_sua_fotografia.jpg" alt="Sua Fotografia">
+    </div>
+    <div class="info">
+        <h2>Dados Pessoais</h2>
+        <p><strong>Nome:</strong> Seu Nome</p>
+        <p><strong>Email:</strong> seuemail@example.com</p>
+        <p><strong>Telefone:</strong> (XX) XXXX-XXXX</p>
+        <!-- Adicione mais campos conforme necessário -->
+    </div>
+    <div class="gallery">
+        <div class="image">
+            <img src="link_para_foto1.jpg" alt="Foto 1">
+            <div class="caption">Legenda da Foto 1</div>
+        </div>
+        <div class="image">
+            <img src="link_para_foto2.jpg" alt="Foto 2">
+            <div class="caption">Legenda da Foto 2</div>
+        </div>
+        <!-- Adicione mais fotos conforme necessário -->
     </div>
 </div>
-
-<script>
-    function openModal(imgSrc) {
-        document.getElementById('modalImg').src = imgSrc;
-        document.getElementById('myModal').style.display = "block";
-    }
-
-    function closeModal() {
-        document.getElementById('myModal').style.display = "none";
-    }
-</script>
 
 </body>
 </html>
