--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     </div>
     <div class="gallery">
         <div class="image">
-            <img src="link_para_foto1.jpg" alt="Foto 1">
+            <img src="./imagensSVR/caminhante.jpg">
             <div class="caption">Legenda da Foto 1</div>
         </div>
         <div class="image">
-            <img src="link_para_foto2.jpg" alt="Foto 2">
+            <img src="./imagensSVR/caminhante.jpg">
             <div class="caption">Legenda da Foto 2</div>
         </div>
         <!-- Adicione mais fotos conforme necessário -->
