--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="gallery">
         <div class="image">
-            <img src="C:\Users\sarav\OneDrive\Documentos\SARA V\Pessoal\FOTOGRAFIAS\IMG_20240303_112756.jpg">
+            <img src="imgSV.png">
             <div class="caption">Legenda da Foto 1</div>
         </div>
         <div class="image">
