--- a/index.html
+++ b/index.html
@@ -1,72 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curriculum Vitae</title>
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meu Portfólio</title>
+  <style>
     body {
-        background-color: aquamarine;
-        font-family: Arial, sans-serif;
+      background-color: #5E5E00; /* Fundo amarelo escuro */
+      font-family: 'Arial Narrow', sans-serif; /* Tipo de letra Arial Narrow */
+      margin: 0;
+      padding: 0;
     }
     .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 20px;
+      width: 80%;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+      color: white;
     }
-    h1 {
-        text-align: center;
-    }
-    .photo {
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    .photo img {
-        max-width: 200px;
-        height: auto;
-        border-radius: 50%;
-        margin-bottom: 10px;
+    #main-photo {
+      width: 300px; /* Ajuste o tamanho conforme necessário */
+      height: auto;
+      display: block;
+      margin: 0 auto;
     }
     .gallery {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 50px;
     }
-    .gallery img {
-        max-width: calc(33.33% - 10px);
-        margin-bottom: 10px;
+    .gallery-item {
+      margin: 10px;
+      text-align: center;
     }
-    .caption {
-        text-align: center;
+    .gallery-item img {
+      width: 200px; /* Ajuste o tamanho conforme necessário */
+      height: auto;
+      display: block;
+      margin: 0 auto;
     }
-</style>
+  </style>
 </head>
 <body>
-
-<div class="container">
-    <h1>Curriculum Vitae</h1>
-    <div class="photo">
-        <img src="link_para_sua_fotografia.jpg" alt="Sua Fotografia">
-    </div>
-    <div class="info">
-        <h2>Dados Pessoais</h2>
-        <p><strong>Nome:</strong> Seu Nome</p>
-        <p><strong>Email:</strong> seuemail@example.com</p>
-        <p><strong>Telefone:</strong> (XX) XXXX-XXXX</p>
-        <!-- Adicione mais campos conforme necessário -->
-    </div>
+  <div class="container">
+    <h1>Meu Portfólio</h1>
+    <img id="main-photo" src="link_para_sua_fotografia.jpg" alt="Minha Foto">
     <div class="gallery">
-        <div class="image">
-            <img src="imgSV.png">
-            <div class="caption">Legenda da Foto 1</div>
-        </div>
-        <div class="image">
-            <img src="./imagensSVR/caminhante.jpg">
-            <div class="caption">Legenda da Foto 2</div>
-        </div>
-        <!-- Adicione mais fotos conforme necessário -->
+      <div class="gallery-item">
+        <img src="link_para_foto_1.jpg" alt="Foto 1">
+        <p>Legenda 1</p>
+      </div>
+      <div class="gallery-item">
+        <img src="link_para_foto_2.jpg" alt="Foto 2">
+        <p>Legenda 2</p>
+      </div>
+      <div class="gallery-item">
+        <img src="link_para_foto_3.jpg" alt="Foto 3">
+        <p>Legenda 3</p>
+      </div>
+      <div class="gallery-item">
+        <img src="link_para_foto_4.jpg" alt="Foto 4">
+        <p>Legenda 4</p>
+      </div>
+      <div class="gallery-item">
+        <img src="link_para_foto_5.jpg" alt="Foto 5">
+        <p>Legenda 5</p>
+      </div>
+      <div class="gallery-item">
+        <img src="link_para_foto_6.jpg" alt="Foto 6">
+        <p>Legenda 6</p>
+      </div>
     </div>
-</div>
-
+  </div>
 </body>
 </html>
