--- a/index.html
+++ b/index.html
@@ -3,73 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meu Portfólio</title>
+  <title>CV Profissional</title>
   <style>
     body {
-      background-color: #5E5E00; /* Fundo amarelo escuro */
-      font-family: 'Arial Narrow', sans-serif; /* Tipo de letra Arial Narrow */
-      margin: 0;
-      padding: 0;
+      background-color: #302e00;
+      font-family: 'Arial Narrow', sans-serif;
     }
     .container {
       width: 80%;
       margin: 0 auto;
+      background-color: #ffffcc;
       padding: 20px;
-      text-align: center;
-      color: white;
+      border-radius: 10px;
     }
-    #main-photo {
-      width: 300px; /* Ajuste o tamanho conforme necessário */
-      height: auto;
+    h1, h2, h3, h4, h5, h6 {
+      text-align: center;
+    }
+    .profile-img {
       display: block;
       margin: 0 auto;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      margin-bottom: 20px;
     }
     .gallery {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin-top: 50px;
+      justify-content: space-between;
+      margin-top: 20px;
     }
     .gallery-item {
-      margin: 10px;
+      flex: 0 0 30%;
+      margin-bottom: 20px;
       text-align: center;
     }
     .gallery-item img {
-      width: 200px; /* Ajuste o tamanho conforme necessário */
-      height: auto;
-      display: block;
-      margin: 0 auto;
+      width: 100%;
+      border-radius: 5px;
+    }
+    .caption {
+      margin-top: 5px;
+      font-size: 12px;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Meu Portfólio</h1>
-    <img id="main-photo" src="link_para_sua_fotografia.jpg" alt="Minha Foto">
+    <h1>Seu Nome</h1>
+    <img class="profile-img" src="sua_foto.jpg" alt="Sua Foto">
     <div class="gallery">
       <div class="gallery-item">
-        <img src="link_para_foto_1.jpg" alt="Foto 1">
-        <p>Legenda 1</p>
+        <img src="foto1.jpg" alt="Foto 1">
+        <div class="caption">Legenda 1</div>
       </div>
       <div class="gallery-item">
-        <img src="link_para_foto_2.jpg" alt="Foto 2">
-        <p>Legenda 2</p>
+        <img src="foto2.jpg" alt="Foto 2">
+        <div class="caption">Legenda 2</div>
       </div>
       <div class="gallery-item">
-        <img src="link_para_foto_3.jpg" alt="Foto 3">
-        <p>Legenda 3</p>
+        <img src="foto3.jpg" alt="Foto 3">
+        <div class="caption">Legenda 3</div>
       </div>
       <div class="gallery-item">
-        <img src="link_para_foto_4.jpg" alt="Foto 4">
-        <p>Legenda 4</p>
+        <img src="foto4.jpg" alt="Foto 4">
+        <div class="caption">Legenda 4</div>
       </div>
       <div class="gallery-item">
-        <img src="link_para_foto_5.jpg" alt="Foto 5">
-        <p>Legenda 5</p>
+        <img src="foto5.jpg" alt="Foto 5">
+        <div class="caption">Legenda 5</div>
       </div>
       <div class="gallery-item">
-        <img src="link_para_foto_6.jpg" alt="Foto 6">
-        <p>Legenda 6</p>
+        <img src="foto6.jpg" alt="Foto 6">
+        <div class="caption">Legenda 6</div>
       </div>
     </div>
   </div>
