--- a/index.html
+++ b/index.html
@@ -55,43 +55,49 @@
         </div>
         <div class="chapter">
             <h2>Trabalhos em HTML</h2>
+            <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
             <!-- Adicione aqui os trabalhos em HTML -->
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
+                    <p>Legenda da Foto HTML 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
+                    <p>Legenda da Foto HTML 2</p>
+                </div>
+            </div>
         </div>
         <hr>
         <div class="chapter">
             <h2>Trabalhos em PowerApp</h2>
+            <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
             <!-- Adicione aqui os trabalhos em PowerApp -->
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerapp_1.jpg" alt="Foto PowerApp 1">
+                    <p>Legenda da Foto PowerApp 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerapp_2.jpg" alt="Foto PowerApp 2">
+                    <p>Legenda da Foto PowerApp 2</p>
+                </div>
+            </div>
         </div>
         <hr>
         <div class="chapter">
             <h2>Trabalhos em Power BI</h2>
+            <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
             <!-- Adicione aqui os trabalhos em Power BI -->
-        </div>
-        <hr>
-        <div class="gallery">
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_1.jpg" alt="Foto 1">
-                <p>Legenda da Foto 1</p>
-            </div>
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_2.jpg" alt="Foto 2">
-                <p>Legenda da Foto 2</p>
-            </div>
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_3.jpg" alt="Foto 3">
-                <p>Legenda da Foto 3</p>
-            </div>
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_4.jpg" alt="Foto 4">
-                <p>Legenda da Foto 4</p>
-            </div>
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_5.jpg" alt="Foto 5">
-                <p>Legenda da Foto 5</p>
-            </div>
-            <div class="gallery-item">
-                <img src="caminho_para_a_foto_6.jpg" alt="Foto 6">
-                <p>Legenda da Foto 6</p>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
+                    <p>Legenda da Foto Power BI 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
+                    <p>Legenda da Foto Power BI 2</p>
+                </div>
             </div>
         </div>
     </div>
