--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfólio</title>
     <style>
         body {
-            background-color: #444;
+            background-color: #162447; /* Alterado para azul escuro */
             font-family: 'Arial Narrow', sans-serif;
             color: #fff;
             margin: 0;
@@ -15,7 +15,8 @@
         .container {
             width: 80%;
             margin: 0 auto;
-            text-align: center;
+            text-align: left; /* Alterado para encostar tudo à esquerda */
+            padding: 20px; /* Adicionado espaço interno para melhor visualização */
         }
         .intro {
             margin-top: 50px;
@@ -41,6 +42,12 @@
             display: block;
             margin: 0 auto;
         }
+        hr {
+            border: none;
+            border-top: 1px solid #fff; /* Adicionada linha de separação */
+            margin-top: 20px; /* Espaço superior da linha */
+            margin-bottom: 20px; /* Espaço inferior da linha */
+        }
     </style>
 </head>
 <body>
@@ -48,6 +55,7 @@
         <div class="intro">
             <h2>Sobre Mim</h2>
             <p>Texto de introdução com 5 linhas.</p>
+            <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p> <!-- Adicionado link para o LinkedIn -->
         </div>
         <hr>
         <div class="profile-img">
