--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>Portfólio</title>
     <style>
         body {
-            background-color: #fff;
+            background-color: #162447; /* Alterado para azul cobalto */
             font-family: 'Arial Narrow', sans-serif;
-            color: #162447;
+            color: #fff;
             margin: 0;
             padding: 0;
         }
         .container {
             width: 80%;
-            margin: 0 auto;
-            text-align: left;
+            margin: 50px auto; /* Adicionado margem superior e inferior */
+            background-color: #fff; /* Alterado para fundo branco */
+            border-radius: 20px; /* Cantos curvos */
+            overflow: hidden; /* Garante que os cantos curvos sejam aplicados corretamente */
+        }
+        .inner-container {
             padding: 20px;
         }
         .profile-img {
@@ -27,8 +31,7 @@
             margin-right: 20px;
         }
         .intro {
-            margin-top: 50px;
-            clear: left; /* Limpa o float */
+            clear: left;
         }
         .chapter {
             margin-top: 50px;
@@ -57,56 +60,58 @@
 </head>
 <body>
     <div class="container">
-        <div class="profile-img">
-            <img src="caminho_para_a_sua_fotografia.jpg" alt="Minha Foto">
-        </div>
-        <div class="intro">
-            <h2>Sobre Mim</h2>
-            <p>Texto de introdução com 5 linhas.</p>
-            <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
-        </div>
-        <div class="chapter">
-            <h2>Trabalhos em HTML</h2>
-            <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em HTML -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
-                    <p>Legenda da Foto HTML 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
-                    <p>Legenda da Foto HTML 2</p>
+        <div class="inner-container">
+            <div class="profile-img">
+                <img src="caminho_para_a_sua_fotografia.jpg" alt="Minha Foto">
+            </div>
+            <div class="intro">
+                <h2>Sobre Mim</h2>
+                <p>Texto de introdução com 5 linhas.</p>
+                <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
+            </div>
+            <div class="chapter">
+                <h2>Trabalhos em HTML</h2>
+                <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
+                <!-- Adicione aqui os trabalhos em HTML -->
+                <div class="gallery">
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
+                        <p>Legenda da Foto HTML 1</p>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
+                        <p>Legenda da Foto HTML 2</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="chapter">
-            <h2>Trabalhos em PowerApp</h2>
-            <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em PowerApp -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerapp_1.jpg" alt="Foto PowerApp 1">
-                    <p>Legenda da Foto PowerApp 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerapp_2.jpg" alt="Foto PowerApp 2">
-                    <p>Legenda da Foto PowerApp 2</p>
+            <div class="chapter">
+                <h2>Trabalhos em PowerApp</h2>
+                <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
+                <!-- Adicione aqui os trabalhos em PowerApp -->
+                <div class="gallery">
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_powerapp_1.jpg" alt="Foto PowerApp 1">
+                        <p>Legenda da Foto PowerApp 1</p>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_powerapp_2.jpg" alt="Foto PowerApp 2">
+                        <p>Legenda da Foto PowerApp 2</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="chapter">
-            <h2>Trabalhos em Power BI</h2>
-            <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
-            <!-- Adicione aqui os trabalhos em Power BI -->
-            <div class="gallery">
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
-                    <p>Legenda da Foto Power BI 1</p>
-                </div>
-                <div class="gallery-item">
-                    <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
-                    <p>Legenda da Foto Power BI 2</p>
+            <div class="chapter">
+                <h2>Trabalhos em Power BI</h2>
+                <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
+                <!-- Adicione aqui os trabalhos em Power BI -->
+                <div class="gallery">
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
+                        <p>Legenda da Foto Power BI 1</p>
+                    </div>
+                    <div class="gallery-item">
+                        <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
+                        <p>Legenda da Foto Power BI 2</p>
+                    </div>
                 </div>
             </div>
         </div>
