--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Portfólio</title>
     <style>
         body {
-            background-color: #162447; /* Alterado para azul cobalto */
+            background-color: #162447;
             font-family: 'Arial Narrow', sans-serif;
-            color: #fff;
+            color: #0047ab; /* Alterado para azul cobalto */
             margin: 0;
             padding: 0;
         }
         .container {
             width: 80%;
-            margin: 50px auto; /* Adicionado margem superior e inferior */
-            background-color: #fff; /* Alterado para fundo branco */
-            border-radius: 20px; /* Cantos curvos */
-            overflow: hidden; /* Garante que os cantos curvos sejam aplicados corretamente */
+            margin: 50px auto;
+            background-color: #fff;
+            border-radius: 20px;
+            overflow: hidden;
         }
         .inner-container {
             padding: 20px;
